# MultiAgent_CrewIA

./: pyproject.toml  zzz-nb001-basic-crewai.ipynb
